--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^3.2.0"
   },
   "dependencies": {
-    "snarkdown": "^2.0.0"
+    "snarkdown": "^2.0.0",
+    "svelte-navigator": "^3.2.2"
   }
 }
